# django-friendly-tag-loader

./: .gitignore  .hgignore  .travis.yml  CHANGES  CHANGES.rst  LICENSE  MANIFEST.in  Makefile  README  README.rst  bootstrap.py  buildout.cfg  pyproject.toml  setup.py  tox.ini
.github/workflows/: test.yml
src/friendlytagloader/templatetags/: friendly_loader.py
src/friendlytemplatetagloader/templatetags/: friendly_loader.py
tests/: runtests.py
tests/testproject/: settings.py  tests.py  urls.py
tests/testproject/templates/: test.html
