[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "django-friendly-tag-loader"
version = "1.3.2"
authors = [
  { name="Jaap Roes", email="jaap.roes@gmail.com" },
  { name="Adam Taylor", email="ataylor32@gmail.com" },
]
description = "Want to optionally use a template tag library? Use this!"
readme = "README.rst"
license = {text = "MIT"}
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Environment :: Web Environment",
    "Framework :: Django",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 2",
    "Programming Language :: Python :: 2.7",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.4",
    "Programming Language :: Python :: 3.5",
    "Programming Language :: Python :: 3.6",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

[project.urls]
Homepage = "https://github.com/ataylor32/django-friendly-tag-loader"
Repository = "https://github.com/ataylor32/django-friendly-tag-loader.git"
Issues = "https://github.com/ataylor32/django-friendly-tag-loader/issues"
Changelog = "https://github.com/ataylor32/django-friendly-tag-loader/blob/master/CHANGES.rst"
